# qp

./: .attic.py  .copier-answers.yml  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  README.md  demo.html  demo.ipynb  do_cover.sh  environment.yml  kld.html  kld.ipynb  pdf.py  pyproject.toml  qp demo.ipynb  render_nb.sh  requirements.txt  setup.py
.github/workflows/: linting.yml  python-package.yml  smoke-test.yml  testing-and-coverage.yml
data/: CFHTLens_sample.P.npy
docs/: .gitignore  conf.py  contributing.md  contributing.rst  demo.html  index.rst  install.rst  practical_example.html  qp.rst  tutorials.rst
docs/desc-0000-qp-photo-z_approximation/: .travis.yml  README.md  acknowledgments.tex  authors.csv  authors.tex  contributions.tex  main.bib  main.tex
docs/desc-0000-qp-photo-z_approximation/research/: analysis.html  analysis.ipynb  analysis.py  data_exploration.html  data_exploration.ipynb  db_sandbox.ipynb  production_script.py
docs/notebooks/: .gitignore  Sparse Voigt representation Demo from SparsePz.ipynb  Sparse qp interface.ipynb  Untitled.ipynb  Untitled1.ipynb  demo.html  demo.ipynb  kld.ipynb  practical_example.ipynb
nb/: demo.ipynb  iterator_demo.ipynb  metrics_examples.ipynb  mixmod_examples.ipynb  practical_example.ipynb  quantile_parameterization_constructor_exploration.ipynb  quantile_parameterization_demo.ipynb  quantile_parameterization_difficult_examples.ipynb  quantile_parameterization_exploration.ipynb  quantile_parameterization_under_the_curve_impl.ipynb  temp_quantile_parameterization_under_the_curve_impl.ipynb
old_docs/desc-0000-qp-photo-z_approximation/: .gitignore  .metadata.json  .travis.yml  acknowledgments.tex  authors.csv  main.tex
old_docs/desc-0000-qp-photo-z_approximation/research/: analysis.html  data_exploration.ipynb  production_script.py
old_docs/notebooks/: .gitignore  kld.ipynb
qp/: __init__.py  _version.py  catalog.py  composite.py  conversion.py  conversion_funcs.py  dict_utils.py  ensemble.py  factory.py  flex_pdf.py  hist_pdf.py  interp_pdf.py  io_layer.py  metrics.py  mixmod.py  mixmod_pdf.py  parametrization.py  pdf.py  pdf_gen.py  persistence.py  plotting.py  probdist.py  quant_pdf.py  scipy_pdfs.py  sparse2_pdf.py  sparse_pdf.py  sparse_rep.py  spline_pdf.py  test_data.py  test_funcs.py  utils.py  voigt_pdf.py
qp/formats/: __init__.py  composite.py  formatter.py  funcform.py  metaformatter.py  mixmod.py  pointeval.py  quantile.py  sample.py
src/qp/: __init__.py  conversion_funcs.py  dict_utils.py  ensemble.py  factory.py  hist_pdf.py  interp_pdf.py  lazy_modules.py  mixmod_pdf.py  packed_interp_pdf.py  packing_utils.py  pdf_gen.py  plotting.py  quant_pdf.py  scipy_pdfs.py  sparse_pdf.py  sparse_rep.py  spline_pdf.py  test_data.py  test_funcs.py  utils.py  version.py
src/qp/data/: test.hdf5
src/qp/metrics/: __init__.py  _brier.py  array_metrics.py  base_metric_classes.py  brier.py  concrete_metric_classes.py  factory.py  goodness_of_fit.py  metrics.py  parallel_metrics.ipynb  pit.py  point_estimate_metric_classes.py
src/qp/quantile_pdf_constructors/: __init__.py  abstract_pdf_constructor.py  cdf_spline_derivative.py  dual_spline_average.py  piecewise_constant.py  piecewise_linear.py
tests/: .coveragerc  .gitignore  benchmark.py  data.py  do_cover.sh  doit.py  fidelity.py  sandbox.py  test_PDF.py  test_auto.py  test_convert.py  test_ensemble.py  test_eval_funcs.py  test_flex_coefs.npy  test_formats.py  test_infrastructure.py  test_metrics.py  test_parallel.py  test_pdf.py  test_persist.py  test_plotting.py  test_utils.py
tests/qp/: .gitignore  benchmark.py  fidelity.py  test_auto.py  test_base_metric_classes.py  test_brier.py  test_ensemble.py  test_eval_funcs.py  test_infrastructure.py  test_metric_factory.py  test_metrics.py  test_parallel.py  test_pit.py  test_point_metrics.py  test_scipy_vectorization.py  test_utils.py
tests/qp/quant_pdf/: test_quant_pdf.py
tests/qp/quantile_pdf_constructors/: test_cdf_spline_derivative.py  test_dual_spline_average.py  test_piecewise_constant.py  test_piecewise_linear.py
